--- a/modules/complaints/client/views/complaint-view.html
+++ b/modules/complaints/client/views/complaint-view.html
@@ -1,1 +1,13 @@
-view-complaint.html
+<h1 class="page-title">
+	Complaints for {{ project.name }}
+</h1>
+
+<div class="block-content">
+	<div class="panel-body">
+		Complaint Details Go Here
+	</div>
+</div>
+<div>
+	<a class="btn btn-default" ui-sref="p.complaint.list">Cancel</a>
+	<a class="btn btn-success" ui-sref="p.complaint.edit({complaintId:complaint._id})">Edit</a>
+</div>
