--- a/modules/templates/client/views/template-list.html
+++ b/modules/templates/client/views/template-list.html
@@ -25,11 +25,11 @@
 
 					<td width="1%" class="text-right">
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.template.edit({templateId:o.id})"><i class="glyphicon glyphicon-pencil"></i></a></td>
-					<td>
-						<a ng-click="$event.stopPropagation()" class="btn btn-default btn-xs" ui-sref="admin.template.test({templateId:o.id})">
+					
+					<td width="1%" class="text-right">
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.template.test({templateId:o.id})">
 						<i class="glyphicon glyphicon-play"></i>
-						</a>
-					</td>
+						</a></td>
 				</tr>
 			</table>
 		</section>
