--- a/modules/project-conditions/client/views/projectcondition-list.html
+++ b/modules/project-conditions/client/views/projectcondition-list.html
@@ -1,32 +1,25 @@
-<section id="project-view" class="row">
-<div class='col-sm-10'>
-	<h1 class="page-title">ProjectConditions Library</h1>
-	<div class="row text-right">
-		<div class="col-sm-12">
-			<button class="btn btn-success btn-sm" x-mode="add" x-collection="data.collection" x-edit-project-projectcondition-modal><i class="glyphicon glyphicon-plus"></i> Add New ProjectCondition</button>
-		</div>
-	</div>
-	<div calss="row">&nbsp;</div>
-	<div class="row">
-		<div class="col-sm-12">
-			<section class="panel panel-default">
-				<table ng-table="data.tableParams" class="dtable table table-condensed table-bordered table-striped">
-					<tr ng-repeat="o in $data">
-						<td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    ><a href x-edit-project-projectcondition-modal x-mode="view" x-projectcondition="o">{{o.name}}</a></td>
-						<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
-						<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
-						<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
-						<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
-						<td><button class="btn btn-default btn-xs" x-edit-project-projectcondition-modal x-mode="edit" x-projectcondition="o"><i class="glyphicon glyphicon-pencil"></i></button></td>
-					</tr>
-				</table>
-			</section>
-		</div>
-	</div>
+<h1 class="page-title">
+	Project Conditions for {{ project.name }}
+</h1>
 
-</div> <!-- /col10 -->
-<div class='col-sm-2'>
-	<tmpl-system-menu x-menu-context="'project'" x-project="projDescEdit.project"></tmpl-system-menu>
+<div class="row">
+	<div class="col-sm-12">
+		<a class="btn btn-default btn-sm"  ui-sref="o.projectcondition.create()"><i class="glyphicon glyphicon-plus"></i> Add New Condition</a>
+		<section class="panel panel-default">
+			<table ng-table="tableParams" show-filter="true" class="table table-condensed table-bordered table-striped">
+			    <tr ng-repeat="o in $data" ui-sref="o.projectcondition.detail({conditionId:o._id})">
+			        <td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    >{{o.name}}</td>
+					<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
+					<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
+					<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
+					<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
+			        <td title="">
+			        	<a ng-click="$event.stopPropagation()" class="btn btn-default btn-xs" ui-sref="o.projectcondition.edit({conditionId:o._id})">
+			        	<i class="glyphicon glyphicon-pencil"></i>
+			        	</a>
+			        </td>
+			    </tr>
+			</table>
+		</section>
+	</div>
 </div>
-
-</section>
