--- a/modules/project-conditions/client/views/projectcondition-view.html
+++ b/modules/project-conditions/client/views/projectcondition-view.html
@@ -1,1 +1,13 @@
-view-projectcondition.html
+<h1 class="page-title">
+	Conditions for {{ project.name }}
+</h1>
+
+<div class="block-content">
+	<div class="panel-body">
+		Condition Details Go Here
+	</div>
+</div>
+<div>
+	<a class="btn btn-default" ui-sref="p.projectcondition.list">Cancel</a>
+	<a class="btn btn-success" ui-sref="p.projectcondition.edit({conditionId:condition._id})">Edit</a>
+</div>
