Applying new routing mechanism to project descriptions. Also removing modal dialogs and applying stylings to make project description related screens consistent with other areas of the application

--- a/modules/complaints/client/views/complaint-view.html
+++ b/modules/complaints/client/views/complaint-view.html
@@ -1,5 +1,5 @@
 <h1 class="page-title">
-	Complaints for {{ project.name }}
+	Complaint for {{ project.name }}
 </h1>
 
 <div class="block-content">
