--- a/modules/project-conditions/client/views/projectcondition-view.html
+++ b/modules/project-conditions/client/views/projectcondition-view.html
@@ -1,5 +1,5 @@
 <h1 class="page-title">
-	Conditions for {{ project.name }}
+	Condition for {{ project.name }}
 </h1>
 
 <div class="block-content">
