--- a/modules/project-descriptions/client/views/projectdescription-edit.html
+++ b/modules/project-descriptions/client/views/projectdescription-edit.html
@@ -1,11 +1,9 @@
-<div class="modal-header">
-	<h3 class="modal-title">ProjectDescription Detail ({{d.dmode}})</h3>
-</div>
+<h1 class="page-title">
+	Add/Edit Project Description
+</h1>
 
-<div class="modal-body">
-
-	<div class="block-content">
-		<div class="panel-body">
+<div class="block-content">
+	<div class="panel-body">
 		<div class="row">
 			<div class="col-sm-9">
 				<div class="form-group">
@@ -65,13 +63,10 @@
 
 		</div>
 
-		</div>
 	</div>
-
-</div> <!-- /modalbody -->
-
-<div class="modal-footer">
-	<a class="btn btn-default" href ng-click="d.cancel()">Cancel</a>
-	<a class="btn btn-default" href ng-click="d.ok()">OK</a>
+</div>
+<div>
+	<a class="btn btn-default" ui-sref="p.projectdescription.list">Cancel</a>
+	<a class="btn btn-primary" href ng-click="save()">Save</a>
 </div>
 
