--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -4,7 +4,7 @@
 
 		<div class="col-sm-9">
 			<div class="navbar-header">
-				<div class="navbar-brand"><a ui-sref="projects" href><img src="modules/core/client/img/brand/eao-logo.png" height="40" width="248"/></a></div>
+				<div class="navbar-brand"><a ui-sref="projects" href><img src="{{ logo }}" height="40" width="248"/></a></div>
 			</div>
 		</div>
 
