--- a/modules/templates/client/views/template-test.html
+++ b/modules/templates/client/views/template-test.html
@@ -2,11 +2,24 @@
 	Test Template for {{template.documentType}} version {{template.versionNumber}}
 </h1>
 <div class="row">
-	<div class="col-sm-3">{{dataset | json}}</div>
+	<div class="col-sm-3">
+	<pre class="small">{{ dataset | json }}</pre>
+	</div>
 	<div class="col-sm-9">
-		<tmpl-template-render x-template="template" x-document="dataset"></tmpl-template-render>
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<tmpl-template-render x-template="template" x-document="dataset"></tmpl-template-render>
+			</div>
+		</div>
 	</div>
 </div>
-<div class="button-panel">
-	<a class="btn btn-danger" ui-sref="admin.template.list">Cancel</a>
+
+<div class="panel panel-default">
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-sm-12 text-right">
+				<a class="btn btn-default" ui-sref="admin.template.list">Cancel</a>
+			</div>
+		</div>
+	</div>
 </div>
