--- a/modules/core/client/views/admin.abstract.html
+++ b/modules/core/client/views/admin.abstract.html
@@ -1,7 +1,8 @@
 <section class="row">
 	<ui-view class='col-sm-10'></ui-view>
 	<div class='col-sm-2'>
-		<section id="menu-side" class="menu-side" style="position: fixed;">
+		<tmpl-system-menu x-menu-context="'settings'"></tmpl-system-menu>
+<!-- 		<section id="menu-side" class="menu-side" style="position: fixed;">
 			<div>
 				<label class="control-label">Admin Menu</label>
 				<ul class="list-unstyled">
@@ -24,6 +25,6 @@
 			  	</ul>
 			</div>
 		</div>
-
+ -->
 	</div>
 </section>
