--- a/modules/vcs/client/views/vc-view.html
+++ b/modules/vcs/client/views/vc-view.html
@@ -1,1 +1,13 @@
-view-vc.html
+<h1 class="page-title">
+	Complaint for {{ project.name }}
+</h1>
+
+<div class="block-content">
+	<div class="panel-body">
+		Complaint Details Go Here
+	</div>
+</div>
+<div>
+	<a class="btn btn-default" ui-sref="p.vc.list">Cancel</a>
+	<a class="btn btn-success" ui-sref="p.vc.edit({vcId:vc._id})">Edit</a>
+</div>
