Animated progress, dynamic import dialog, can upload 3 different types of import files.  Projects, contacts, and group contacts.  Animation on each processing import after initial upload.

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -42,7 +42,7 @@
 			<li><a ui-sref="p.edit({projectid: 'new'})">Add Project</a></li>
 		</ul>
 		<ul class="list-unstyled" ng-show="menu.authentication.user">
-			<li><a x-modal-project-import href x-project="menu.import">Import Projects</a></li>
+			<li><a x-modal-project-import href x-project="menu.import">Import</a></li>
 		</ul>
 	</div>
 
