Add in some handlers, fix up the UI

--- a/modules/projects/client/views/project-partials/modal-project-import.html
+++ b/modules/projects/client/views/project-partials/modal-project-import.html
@@ -84,7 +84,7 @@
 	<div class="modal-footer">
 		<div>
 			<a class="btn btn-default" href ng-click="projectImport.cancel()">Cancel</a>
-			<a class="btn btn-default" href ng-click="projectImport.ok()">Save</a>
+			<a class="btn btn-default" href ng-click="projectImport.ok()">Ok</a>
 		</div>
 	</div>
 </div>
