some changes to the template model and milestone models

--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -143,22 +143,9 @@
 			<li><a ui-sref="p.order.list">Orders</a></li>
 			<li><a ui-sref="p.complaint.list">Complaints</a></li>
 			<li><a ui-sref="p.document.list">Documents</a></li>
-			<li><a ui-sref="p.notification.list">Notifications</a></li>
+			<li><a ui-sref="p.review.list">Reviews</a></li>
 		</ul>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
