--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -3,12 +3,12 @@
 </h1>
 
 <div class="block-content">
-	<div ng-include="modules/artifacts/client/views/partial.artifact-edit.html"></div>
+	<div ng-include="'/modules/artifacts/client/views/partial.artifact-edit.html'"></div>
 </div>
 
-<div  class="block-content" ng-include="modules/artifacts/client/views/partial.artifact-notes.html"></div>
+<div class="block-content" ng-include="'/modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 
-<div  class="block-content" ng-include="modules/artifacts/client/views/partial.artifact-comments.html"></div>
+<div class="block-content" ng-include="'/modules/artifacts/client/views/partial.artifact-comments.html'"></div>
 
 <div>
 	<a class="btn btn-default" ui-sref="p.artifactlist">Cancel</a>
