--- a/modules/templates/client/views/template-test.html
+++ b/modules/templates/client/views/template-test.html
@@ -1,26 +1,60 @@
-<h1 class="page-title">
+<h1 class="page-title no-lower-margin">
 	Test Template for {{template.documentType}} version {{template.versionNumber}}
 </h1>
+
 <div class="row">
-	<div class="col-sm-3"><pre style="font-size: 10px">{{dataset | json}}</pre></div>
-	<div class="col-sm-9">
-		<div>
-			<div class="col-sm-6">
-			<div class="form-group">
-				<label for="pillar" class="control-label">Go to Section</label>
-				<select ng-change="goto(gosection)" id="pillar" ng-model='gosection' class="form-control" ng-options="section.name as section.label for section in allsections"></select>
-			</div>
-			</div>
-			<div class="col-sm-6">
-			<div class="form-group">
-				<label for="pillar" class="control-label">Append New in Section</label>
-				<select ng-change="append(newsection)" id="pillar" ng-model='newsection' class="form-control" ng-options="section.name as section.label for section in repeatsections"></select>
-			</div>
-			</div>
-		</div>
-		<tmpl-template-render x-template="template" x-mode="edit" x-document="dataset"></tmpl-template-render>
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="admin.template.list">Cancel</a>
 	</div>
 </div>
-<div class="button-panel">
-	<a class="btn btn-danger" ui-sref="admin.template.list">Cancel</a>
+
+<div class="row" ng-class="{'edit-outlines': toggleBlue}">
+	<div class="col-sm-3">
+		<div class="form-group" ng-init="toggleBlue = true">
+			<a href ng-click="toggleBlue = !toggleBlue">
+				<span ng-show="toggleBlue">Hide Outlines</span>
+				<span ng-show="!toggleBlue">Show Outlines</span>				
+			</a>
+		</div>
+		
+		<div class="form-group" ng-if="allsections.length > 0"><hr>
+			<label class="control-label">Go To Section</label>
+			<ul class="task-list list-unstyled">
+				<li ng-repeat="section in allsections"><a du-smooth-scroll href="#{{ section.name }}">{{ section.label }}</a></li>
+			</ul>
+		</div>
+		
+		<div class="form-group" ng-if="repeatsections.length > 0"><hr>
+			<label class="control-label">Append New in Section</label>
+			<ul class="task-list list-unstyled">
+				<li ng-repeat="section in repeatsections"><a href ng-click="append(section.name)">{{ section.label }}</a></li>
+			</ul>
+		</div>
+		
+		<div class="form-group"><hr>
+			<label class="control-label">Data Set</label>
+			<pre class="small">{{dataset | json}}</pre>
+		</div>
+	</div>
+	<div class="col-sm-9">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<div class="row">
+					<tmpl-template-render x-template="template" x-mode="edit" x-document="dataset"></tmpl-template-render>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="panel panel-default">
+	<div class="panel-body">
+		<div class="row">
+
+			<div class="col-sm-12 text-right">
+				<a class="btn btn-default" ui-sref="admin.template.list">Cancel</a>
+			</div>
+
+		</div>
+	</div>
 </div>
