--- a/modules/contacts/client/views/contact-view.html
+++ b/modules/contacts/client/views/contact-view.html
@@ -1,1 +1,155 @@
-view-contact.html
+<h1 class="page-title no-lower-margin">
+	View Contact
+</h1>
+
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="admin.contact.list">Cancel</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.contact.edit({contactId:contact._id})">Edit</a>
+	</div>
+</div>
+
+<div class="panel panel-default">
+	<div class="panel-body">
+
+		<div class="row">
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="salutation" class="control-label">Salutation</label>
+					<p class="form-control-static">{{ contact.salutation }}</p>
+				</div>
+			</div>		
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="firstName" class="control-label">First Name</label>
+					<p class="form-control-static">{{ contact.firstName }}</p>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="middleName" class="control-label">Middle Name</label>
+					<p class="form-control-static">{{ contact.middleName }}</p>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="lastName" class="control-label">Last Name</label>
+					<p class="form-control-static">{{ contact.lastName }}</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="phoneNumber" class="control-label">Phone Number</label>
+					<p class="form-control-static">{{ contact.phoneNumber }}</p>
+				</div>
+			</div>		
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="faxNumber" class="control-label">Fax Number</label>
+					<p class="form-control-static">{{ contact.faxNumber }}</p>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="cellPhoneNumber" class="control-label">Mobile Number</label>
+					<p class="form-control-static">{{ contact.cellPhoneNumber }}</p>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="email" class="control-label">Email</label>
+					<p class="form-control-static">{{ contact.email }}</p>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="well well-sm">
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="form-group">
+						<label for="address1" class="control-label">Address (Line 1)</label>
+						<p class="form-control-static">{{ contact.address1 }}</p>
+					</div>
+				</div>		
+				<div class="col-sm-6">
+					<div class="form-group">
+						<label for="address2" class="control-label">Address (Line 2)</label>
+						<p class="form-control-static">{{ contact.address2 }}</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-3">
+					<div class="form-group">
+						<label for="city" class="control-label">City</label>
+						<p class="form-control-static">{{ contact.city }}</p>
+					</div>
+				</div>		
+				<div class="col-sm-3">
+					<div class="form-group">
+						<label for="province" class="control-label">Province</label>
+						<p class="form-control-static">{{ contact.province }}</p>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="form-group">
+						<label for="country" class="control-label">Country</label>
+						<p class="form-control-static">{{ contact.country }}</p>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="form-group">
+						<label for="postalCode" class="control-label">Postal Code</label>
+						<p class="form-control-static">{{ contact.postalCode }}</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-4">
+				<div class="form-group">
+					<label for="orgName" class="control-label">Organization</label>
+					<p class="form-control-static">{{ contact.orgName }}</p>
+				</div>
+			</div>		
+			<div class="col-sm-4">
+				<div class="form-group">
+					<label for="department" class="control-label">Department</label>
+					<p class="form-control-static">{{ contact.department }}</p>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="form-group">
+					<label for="title" class="control-label">Title</label>
+					<p class="form-control-static">{{ contact.title }}</p>
+				</div>
+			</div>			
+		</div>
+
+
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="form-group">
+					<label for="notes" class="control-label">Notes</label>
+					<p class="form-control-static">{{ contact.notes }}</p>
+				</div>
+			</div>
+		</div>
+
+		<hr>
+
+		<div class="row">
+			<div class="col-sm-12 text-right">
+				<a class="btn btn-default" ui-sref="admin.contact.list">Cancel</a>
+				<a class="btn btn-default" ui-sref="admin.contact.edit({contactId:contact._id})">Edit</a>
+			</div>
+		</div>
+	</div>
+
+</div> <!-- /panelbody -->
