--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.condition.create()">Add New Condition</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.condition.create()">+ Add New Condition</a>
 	</div>
 </div>
 
