--- a/modules/topics/client/views/topic-list.html
+++ b/modules/topics/client/views/topic-list.html
@@ -1,7 +1,10 @@
-<h1 class="page-title no-lower-margin">Topics Library</h1>
-<div class="row text-right">
-	<div class="col-sm-12">
-		<a class="btn btn-sm btn-link" ui-sref="admin.topic.create()">+ Add New Topic</a>
+<h1 class="page-title no-lower-margin">
+	Topics Library
+</h1>
+
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="admin.topic.create()">+ Add New Topic</a>
 	</div>
 </div>
 
