--- a/modules/contacts/client/views/contact-list.html
+++ b/modules/contacts/client/views/contact-list.html
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.contact.create()">Add New Contact</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.contact.create()">+ Add New Contact</a>
 	</div>
 </div>
 
