--- a/modules/templates/client/views/template-list.html
+++ b/modules/templates/client/views/template-list.html
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.template.create()">Add New Template</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.template.create()">+ Add New Template</a>
 	</div>
 </div>
 
